# PoskoSemestralnaPraca

./: CMakeLists.txt  Obrazok.c  Obrazok.h  README.md  addSocket.c  farbaHraca.c  farbaHraca.h  hraClovece.c  hraClovece.h  hrac.c  hrac.h  hraciaPlocha.c  hraciaPlocha.h  k_s_client.c  k_s_client.h  k_s_definitions.c  k_s_definitions.h  k_s_server.c  k_s_server.h  kocka.c  kocka.h  main.c  panacik.c  panacik.h  policko.c  policko.h  stavPanacika.h
Clovece/: Obrazok.c  Obrazok.h  farbaHraca.h  hraClovece.c  hraClovece.h  hrac.c  hrac.h  hraciaPlocha.c  hraciaPlocha.h  kocka.c  kocka.h  panacik.c  panacik.h  policko.c  policko.h
